--- a/paper.tex
+++ b/paper.tex
@@ -437,7 +437,7 @@ Section~\ref{sec:criterion} describes the different criterion used in this work 
         \subsubsection{Sequential forward features selection}
         \label{sec:forward-presentation}
 
-        The Sequential Forward Selection (SFS) starts with an empty set of selected features.  At each  step, the feature that most  improves the criterion function $J$  is added  to the set. This feature is definitively added to the pool of selected features and the algorithm stops when a given number of variables \emph{maxVarNb} has been reached. The Algorithm~\ref{alg:sfs} presents the process in details.
+        The Sequential Forward Selection (SFS) starts with an empty set of selected features.  At each  step, the feature associated to the highest criterion function $J$  is added  to the set. This feature is definitively added to the pool of selected features and the algorithm stops when a given number of variables \emph{maxVarNb} has been reached. The Algorithm~\ref{alg:sfs} presents the process in details.
 
         \begin{algorithm}
         \caption{Sequential forward features selection\label{alg:sfs}}
@@ -464,9 +464,9 @@ Section~\ref{sec:criterion} describes the different criterion used in this work 
 
         The Sequential Floating Forward Selection (SFFS)\cite{somol1999adaptive} is based on two algorithms: the SFS described above and the Sequential Backward Selection (SBS). The SBS is the backward equivalent of SFS. The difference is that it starts with every features in the pool of selected features and tries at each step to remove the less significant one in term of the given criterion function.
 
-        The SFFS works as the SFS but between each step of the SFS algorithm, a backward selection is operated to identify the less important feature. If the criterion value is higher than the best value ever obtained with a set of same size, the identified feature is picked out. The SBS step is repeated while removing the less important feature leads to an increase of the criterion value. Then SFS is called again. The algorithm stops when a given number of features \emph{maxVarNb} has been selected. The Algorithm~\ref{alg:sffs} provides details of the process.
+        The SFFS works as the SFS but between each step of the SFS algorithm, a backward selection is operated to identify the less important feature. If the criterion value is higher than the best value ever obtained with a set of same size, the identified feature is picked out. The SBS step is repeated while removing the less important feature leads to an increase of the criterion value. Then SFS is called again. The algorithm stops when a given number of features \emph{maxVarNb} has been selected. The Algorithm~\ref{alg:sffs} provides details about the process.
 
-        This SFFS algorithm eventually evaluates more solutions than the SFS algorithm. The results are expected to be better but the trade-off is an increased computational time which is dependent on the complexity of the dataset.
+        This SFFS algorithm evaluates more solutions than the SFS algorithm. The results are expected to be better but the trade-off is an increased computational time which is dependent on the complexity of the dataset.
 
         \begin{algorithm}
         \caption{Sequential floating forward features selection\label{alg:sffs}}
@@ -514,14 +514,13 @@ numerical  complexity is  on average  $O(d^3)$.  Furthermore,  for the
 \emph{accuracy}-type  criterion the  complexity  is  augmented by  the
 cross-validation procedure.
 
-An efficient implementation of the criterion optimization is proposed.
-It is based on  the symmetry property of the covariance  matrix and block
-inverse  formula~\cite{IMM2012-03274}. In  the following  it is  shown
-that the criterion  can be split into  two parts: one that  needs to be
-computed for each  tested variable, and one that needs  to be computed
-only once per  selection step. For the  cross-validation part, updates
-rules are given to derive sub-models  without the necessity to learn a
-GMM models for each fold.
+An efficient implementation of  the criterion optimization is detailed
+in  the following.   It  is  based on  the  symmetry  property of  the
+covariance matrix  and block inverse  formula~\cite{IMM2012-03274}.  It is shown  that the criterion  can be split  into two
+parts: one that needs to be computed for each tested variable, and one
+that  needs to  be  computed only  once per  selection  step. For  the
+cross-validation part,  updates rules  are given to  derive sub-models
+without the necessity to learn a GMM models for each fold.
 
 \subsection{Statistical update rules}
         \subsubsection{Update for cross validation}
@@ -577,7 +576,7 @@ GMM models for each fold.
             \mathbf{u}_c^t          & \sigma^{(k)}_c \\
             \end{array}\bigg],
         \end{equation}
-        where  $\sigma^{(k)}_c$  is  the variance  of  $\mathbf{x}_c$,
+        where  $\sigma^{(k)}_c$  is  the variance  of  $x_c$,
         $\mathbf{u}_c$ is  the $k^{th}$  column of the  matrix without
         the          diagonal           element,          \emph{i.e.},
         $\mathbf{u}_{c}(i) =  \boldsymbol{\Sigma}^{(k)}_{c}(i,k)$ with
@@ -669,49 +668,8 @@ GMM models for each fold.
     of the Algorithm~\ref{alg:sffs} using these formulae.
 
     \subsection{Numerical issues}
-    For each  iteration $k$, after  the selection of  optimal features
-    w.r.t  the  selected criterion,  the  inverses  of the  covariance
-    matrices and their log-determinant  needs to be computed. However,
-    the lack of training samples or the highly correlated features may
-    induce  a  badly-conditioned  matrix  with  very  small,  or  even
-    negative, eigenvalues.   Such values will degrade  drastically the
-    estimation of the  inverse and of the log-determinant,  and so the
-    numerical stability.
 
-    To deal with this limitation, the choice has been made to perform an eigendecomposition of the covariance matrix $\boldsymbol{\Sigma}^{(k)}_c$:
-
-    \begin{eqnarray}
-    \boldsymbol{\Sigma}^{(k)}_c = \mathbf{P}^{(k)}_c \boldsymbol{\Lambda}^{(k)}_c (\mathbf{P}^{(k)}_c)^t\label{eq:eigendecomp}
-    \end{eqnarray}
-
-
-    where $\boldsymbol{\Lambda}^{(k)}_c$  and $\mathbf{P}^{(k)}_c$ are
-    the diagonal  matrix of eigenvalues  of the covariance  matrix and
-    the    orthonormal   matrix    of   corresponding    eigenvectors,
-    respectively.  To prevent  numerical instability,  the eigenvalues
-    are thresholded to a given  value EPS\_FLT. In our implementation,
-    EPS\_FLT is set to the floating machine precision.
-
-    Then, the inverse of the covariance matrix can be computed as
-
-    \begin{eqnarray}
-      (\boldsymbol{\Sigma}^{(k)}_c)^{-1} = \mathbf{P}^{(k)}_c (\tilde{\boldsymbol{\Lambda}}^{(k)}_c)^{-1} (\mathbf{P}^{(k)}_c)^t\label{eq:eigendecomp:inv}
-    \end{eqnarray}
-
-    and the log-determinant as
-
-    \begin{eqnarray}
-      \label{eq:log:det}
-      \log \left(|\boldsymbol{\Sigma}_c^{(k)}|\right) = \sum_{i=1}^d\log(\tilde{\lambda}_{c}^{(k)}(i)),
-    \end{eqnarray}
-    where the \textasciitilde{} indicated thresholded values and $\lambda_{c}(i)$ the ith eigenvalue.
-
-    Same reasoning applied  to the term $\alpha$ in  the update rules:
-    it       is       also        thresholded       to       EPS\_FLT.
-    Algorithm~\ref{alg:sffs-update}    details   when    computational
-    stability is enforced (lines 7, 13, 25 and 31).
-
-    \begin{algorithm}
+        \begin{algorithm}
     \caption{Sequential floating forward features selection with updates\label{alg:sffs-update}}
     {\footnotesize
     \begin{algorithmic}[1]
@@ -765,9 +723,68 @@ GMM models for each fold.
     }
     \end{algorithm}
 
+    For each  iteration $k$, after  the selection of  optimal features
+    w.r.t  the  selected criterion,  the  inverses  of the  covariance
+    matrices and their log-determinant  needs to be computed. However,
+    the lack of training samples or the highly correlated features may
+    induce  a  badly-conditioned  matrix  with  very  small,  or  even
+    negative, eigenvalues.   Such values will degrade  drastically the
+    estimation of the  inverse and of the log-determinant,  and so the
+    numerical stability.
+
+    To deal with this limitation, the choice has been made to perform an eigendecomposition of the covariance matrix $\boldsymbol{\Sigma}^{(k)}_c$:
+
+    \begin{eqnarray}
+    \boldsymbol{\Sigma}^{(k)}_c = \mathbf{P}^{(k)}_c \boldsymbol{\Lambda}^{(k)}_c (\mathbf{P}^{(k)}_c)^t\label{eq:eigendecomp}
+    \end{eqnarray}
+
+
+    where $\boldsymbol{\Lambda}^{(k)}_c$  and $\mathbf{P}^{(k)}_c$ are
+    the diagonal  matrix of eigenvalues  of the covariance  matrix and
+    the    orthonormal   matrix    of   corresponding    eigenvectors,
+    respectively.  To prevent  numerical instability,  the eigenvalues
+    are thresholded to a given  value EPS\_FLT. In our implementation,
+    EPS\_FLT is set to the floating machine precision.
+
+    Then, the inverse of the covariance matrix can be computed as
+
+    \begin{eqnarray}
+      (\boldsymbol{\Sigma}^{(k)}_c)^{-1} = \mathbf{P}^{(k)}_c (\tilde{\boldsymbol{\Lambda}}^{(k)}_c)^{-1} (\mathbf{P}^{(k)}_c)^t\label{eq:eigendecomp:inv}
+    \end{eqnarray}
+
+    and the log-determinant as
+
+    \begin{eqnarray}
+      \label{eq:log:det}
+      \log \left(|\boldsymbol{\Sigma}_c^{(k)}|\right) = \sum_{i=1}^d\log(\tilde{\lambda}_{c}^{(k)}(i)),
+    \end{eqnarray}
+    where the \textasciitilde{} indicated thresholded values and $\lambda_{c}(i)$ the ith eigenvalue.
+
+    Same reasoning applied  to the term $\alpha$ in  the update rules:
+    it       is       also        thresholded       to       EPS\_FLT.
+    Algorithm~\ref{alg:sffs-update}    details   when    computational
+    stability is enforced (lines 7, 13, 25 and 31).
+
     \subsection{Implementation}
     \label{sec:otb-module}
+    \begin{figure} 
+        \centering %Pas touche l'indentation !
+        \begin{minted}[fontsize=\tiny,bgcolor=bg]{sh} 
+otbcli_TrainGMMSelectionApp -io.il hyper.tif \
+                            -io.vd reference.shp \
+                            -gmm.varnb 20 -gmm.method forward -gmm.crit jm\
+                            -gmm.best 1 -gmm.seed 0\
+                            -io.out model.txt
 
+otbcli_PredictGMMApp -in hyper.tif \
+                     -model model.txt -modeltype selection\
+                     -out ThematicMap.tif
+        \end{minted}
+        \caption{OTB Module: The feature selection is done on the image \emph{hyper.tif} using the training set from \emph{reference.shp}. The feature selection algorithm is the forward search used with the Jeffries-Matusita criterion, 20 features are extracted and the corresponding GMM model is saved in \emph{model.txt}. Then the whole image is classified using the model and the results is saved in the geotiff \emph{ThematicMap.tif}.}
+        \label{fig:otb:ffs}
+    \end{figure}
+
+    
     The proposed  method has been implemented  in \texttt{C++} through
     the  Orfeo  Toolbox (OTB)~\cite{christophe2008orfeo}.   The  Orfeo
     Toolbox  is  an  open-source  library  for  remote  sensing  image
@@ -786,23 +803,6 @@ GMM models for each fold.
     classification step is streamed and there is no limitation in term
     of image  size. The Figure~\ref{fig:otb:ffs} shows  a code excerpt
     to run the application.
-
-    \begin{figure} 
-        \centering %Pas touche l'indentation !
-        \begin{minted}[fontsize=\tiny,bgcolor=bg]{sh} 
-otbcli_TrainGMMSelectionApp -io.il hyper.tif \
-                            -io.vd reference.shp \
-                            -gmm.varnb 20 -gmm.method forward -gmm.crit jm\
-                            -gmm.best 1 -gmm.seed 0\
-                            -io.out model.txt
-
-otbcli_PredictGMMApp -in hyper.tif \
-                     -model model.txt -modeltype selection\
-                     -out ThematicMap.tif
-        \end{minted}
-        \caption{OTB Module: The feature selection is done on the image \emph{hyper.tif} using the training set from \emph{reference.shp}. The feature selection algorithm is the forward search used with the Jeffries-Matusita criterion, 20 features are extracted and the corresponding GMM model is saved in \emph{model.txt}. Then the whole image is classified using the model and the results is saved in the geotiff \emph{ThematicMap.tif}.}
-        \label{fig:otb:ffs}
-    \end{figure}
 
 \section{Data-sets}
 \label{sec:datasets}
@@ -1236,14 +1236,14 @@ Perspectives of this work concern the selection of continuous interval of featur
             \left[\begin{array}{c} \mathbf{A}_c \mathbf{x}^{(k-1)} + x_k \mathbf{v}_c \\ \mathbf{v}_c^t \mathbf{x}^{(k-1)} + \frac{x_k}{\alpha_c} \end{array}\right] \\
      &= &&(\mathbf{x}^{(k-1)})^t \mathbf{A}_c \mathbf{x}^{(k-1)} + x_k \mathbf{v}_c^t \mathbf{x}^{(k-1)} \\
      & &&+ (\mathbf{x}^{(k-1)})^t \mathbf{v}_c x_k + \frac{(x_k)^2}{\alpha_c} \\
-     &= &&(\mathbf{x}^{(k-1)})^t ((\boldsymbol{\Sigma}_c^{(k-1)})^{-1} \\
-     & &&+ \frac{1}{\alpha_c} (\boldsymbol{\Sigma}_c^{(k-1)})^{-1} \mathbf{u}_c \mathbf{u}_c^t (\boldsymbol{\Sigma}_c^{(k-1)})^{-1}) \mathbf{x}^{(k-1)}\\
+     &= &&(\mathbf{x}^{(k-1)})^t \Big((\boldsymbol{\Sigma}_c^{(k-1)})^{-1} \\
+     & &&+ \frac{1}{\alpha_c} (\boldsymbol{\Sigma}_c^{(k-1)})^{-1} \mathbf{u}_c \mathbf{u}_c^t (\boldsymbol{\Sigma}_c^{(k-1)})^{-1}\Big) \mathbf{x}^{(k-1)}\\
      & &&+ 2 x_k \mathbf{v}_c^t \mathbf{x}^{(k-1)} + \frac{(x_k)^2}{\alpha_c} \\
-     &= &&(\mathbf{x}^{(k-1)})^t ((\boldsymbol{\Sigma}_c^{(k-1)})^{-1} + \alpha_c \mathbf{v}_c \mathbf{v}_c^t) \mathbf{x}^{(k-1)}\\
+     &= &&(\mathbf{x}^{(k-1)})^t \Big((\boldsymbol{\Sigma}_c^{(k-1)})^{-1} + \alpha_c \mathbf{v}_c \mathbf{v}_c^t\Big) \mathbf{x}^{(k-1)}\\
      & &&+ 2 x_k \mathbf{v}_c^t \mathbf{x}^{(k-1)} + \frac{(x_k)^2}{\alpha_c} \\
-     &= &&(\mathbf{x}^{(k-1)})^t (\boldsymbol{\Sigma}_c^{(k-1)})^{-1} \mathbf{x}^{(k-1)} + \alpha_c ( (\mathbf{x}^{(k-1)})^t \mathbf{v}_c \mathbf{v}_c^t \mathbf{x}^{(k-1)} \\
-     & &&+ 2 \frac{x_k}{\alpha_c} \mathbf{v}_c^t \mathbf{x}^{(k-1)} + \frac{(x_k)^2}{\alpha_c^2}) \\
-     &= &&(\mathbf{x}^{(k-1)})^t (\boldsymbol{\Sigma}_c^{(k-1)})^{-1} \mathbf{x}^{(k-1)} + \alpha_c ( (\mathbf{x}^{(k-1)})^t \mathbf{v}_c + \frac{x_k}{\alpha_c} )^2 \\
+     &= &&(\mathbf{x}^{(k-1)})^t (\boldsymbol{\Sigma}_c^{(k-1)})^{-1} \mathbf{x}^{(k-1)} + \alpha_c \Big( (\mathbf{x}^{(k-1)})^t \mathbf{v}_c \mathbf{v}_c^t \mathbf{x}^{(k-1)} \\
+     & &&+ 2 \frac{x_k}{\alpha_c} \mathbf{v}_c^t \mathbf{x}^{(k-1)} + \frac{(x_k)^2}{\alpha_c^2}\Big) \\
+     &= &&(\mathbf{x}^{(k-1)})^t (\boldsymbol{\Sigma}_c^{(k-1)})^{-1} \mathbf{x}^{(k-1)} + \alpha_c \Big( (\mathbf{x}^{(k-1)})^t \mathbf{v}_c + \frac{x_k}{\alpha_c} \Big)^2 \\
      &= &&(\mathbf{x}^{(k-1)})^t (\boldsymbol{\Sigma}_c^{(k-1)})^{-1} \mathbf{x}^{(k-1)} + \alpha_c ( \left[\begin{array}{cc} \mathbf{v}_c^t & \frac{1}{\alpha_c} \end{array}\right] \mathbf{x}^{(k)} )^2
     \end{alignat*}
 \end{proof}
