add review response

--- a/paper.tex
+++ b/paper.tex
@@ -1,4 +1,4 @@
-%\documentclass[journal,peerreview,onecolumn]{IEEEtran}
+% \documentclass[journal,peerreview,onecolumn]{IEEEtran}
 \documentclass[journal]{IEEEtran}
 \usepackage{etex}
 \usepackage{cite}
@@ -1175,7 +1175,7 @@ resolution multispectral airborne image.
     % It can be guessed that the fact that the Gaussian hypothesis is unlikely to be verified explains the difficulty to extract the finer information available in a larger dataset. The JM distance has stressed in Table~\ref{tab:crit} has a strong Gaussian hypothesis and the same hypotheses could also explain the drop of the classification rate of GMM classifiers with JM distance as criterion.
 
     The  Postdam classes  are  more difficult  to discriminate,  since
-    Gaussianity assumption  does not  hold. For instance,  a buildings
+    Gaussianity assumption  does not  hold. For instance,  a building
     can  be  made of  various  materials,  resulting in  heterogeneous
     distribution.   Hence,  GMM  with  ridge  regularization  performs
     baldy. Random  Forest classifier is  more adapted to  this problem
