delete section of former doc...

--- a/response.tex
+++ b/response.tex
@@ -124,37 +124,12 @@ In Algorithm 3, a threshold EPS\_FLT on eigenvalues is used to prevent numerical
     \item Grammar mistakes such as ``a buildings''.
   \end{enumerate}
   \begin{resbox}
-    % Done. Thank you for the careful reading.
+    % Thank you for the careful reading.
     NB:
     no $v_c$ after prop 2...
     building corrected. Need to correct english at the end
   \end{resbox}
 \end{revbox}
-
-
-\section{Reviewer 2}
-
-\begin{revbox}
-  page 4 :  C. Model inference equations seem correct  but what is the
-  typical range of p-hat (fixed parameter)?
-  \begin{resbox}
-
-  \end{resbox}
-\end{revbox}
-
-\begin{revbox}
-  Experimental Results : Absence of such visual graphics such as final
-  classification map,  original imagery and accuracy  studies based on
-  classification  performance   (not  just  compute  time   and  kappa
-  coefficients, but  in terms  of miss classification  rate, confusion
-  matrix from classifications etc.)
-
-  \begin{resbox}
-
-  \end{resbox}
-\end{revbox}
-
-\clearpage
 
 \section{Reviewer 2}
 \begin{revbox}
