add data file to plot derivate of criterion

--- a/paper.tex
+++ b/paper.tex
@@ -1,5 +1,5 @@
-% \documentclass[journal,peerreview,onecolumn]{IEEEtran}
-\documentclass[journal]{IEEEtran}
+\documentclass[journal,peerreview,onecolumn]{IEEEtran}
+% \documentclass[journal]{IEEEtran}
 \usepackage{etex}
 \usepackage{cite}
 \usepackage[pdftex]{graphicx}
@@ -30,8 +30,8 @@
 }
 
 % for peerreview
-% \usepackage{setspace}
-% \onehalfspacing
+\usepackage{setspace}
+\onehalfspacing
 
 \newtheorem{prop}{Proposition}
 
